--- a/src/client/incomestatement.jade
+++ b/src/client/incomestatement.jade
@@ -17,8 +17,20 @@
 							div
 								= account.name
 								.pull-right= account.balance.abs()+""
-				if !this.balance.equals(0)
+				if this.activeBookings.length || this.passiveBookings.length		
 					tr
+						th(style="borderRight:1px solid black")
+							each booking in this.activeBookings
+								div
+									= booking.transactionComment
+									.pull-right= booking.amount
+						th
+							each booking in this.passiveBookings
+								div
+									= booking.transactionComment
+									.pull-right= booking.amount
+				if !this.balance.equals(0)
+					tr.warning
 						th(style="borderRight:1px solid black")
 							if this.balance.lt(0)
 								| Nicht verbuchter Gewinn
@@ -41,12 +53,18 @@ script(section="body").
 			account.balance = decimal(account.balance);
 		}
 		this.outlays = this.accounts.filter(a=>a.type===1&&a.balance.gt(0));
-		this.yields = this.accounts.filter(a=>a.type===1&&a.balance.lt(0));
+		this.yields = this.accounts.filter(a=>a.type===1&&a.balance.lt(0));		
 		this.outlaysTotal = this.outlays.reduce((total,account)=>total.plus(account.balance.abs()),decimal(0));
 		this.yieldsTotal = this.yields.reduce((total,account)=>total.plus(account.balance.abs()),decimal(0));
 		
-		this.total = decimal.max(this.outlaysTotal,this.yieldsTotal);
-		this.balance = this.outlaysTotal.minus(this.yieldsTotal);
+		var incomeStatementAccount = this.accounts.filter(t=>t.type === 3)[0].id;
+		this.activeBookings = await client.getBookings({from:incomeStatementAccount});
+		this.passiveBookings = await client.getBookings({to:incomeStatementAccount});
+		this.activeTotal = this.activeBookings.reduce((total,booking)=>total.plus(booking.amount),decimal(0))
+		this.passiveTotal = this.passiveBookings.reduce((total,booking)=>total.plus(booking.amount),decimal(0))
+		
+		this.total = decimal.max(this.outlaysTotal.plus(this.activeTotal),this.yieldsTotal.plus(this.passiveTotal));
+		this.balance = this.outlaysTotal.plus(this.activeTotal).minus(this.yieldsTotal).minus(this.passiveTotal);
 		
 		
 		this.forceUpdate();
